compiler/antlr4/Sysy2022/Sysy2022Parser.cpp

// Generated from Sysy2022Parser.g4 by ANTLR 4.7.2


#include "Sysy2022ParserVisitor.h"

#include "Sysy2022Parser.h"


using namespace antlrcpp;
using namespace antlr4;

Sysy2022Parser::Sysy2022Parser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

Sysy2022Parser::~Sysy2022Parser() {
  delete _interpreter;
}

std::string Sysy2022Parser::getGrammarFileName() const {
  return "Sysy2022Parser.g4";
}

const std::vector<std::string>& Sysy2022Parser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& Sysy2022Parser::getVocabulary() const {
  return _vocabulary;
}


//----------------- CompunitContext ------------------------------------------------------------------

Sysy2022Parser::CompunitContext::CompunitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

Sysy2022Parser::CompunitplusContext* Sysy2022Parser::CompunitContext::compunitplus() {
  return getRuleContext<Sysy2022Parser::CompunitplusContext>(0);
}

tree::TerminalNode* Sysy2022Parser::CompunitContext::EOF() {
  return getToken(Sysy2022Parser::EOF, 0);
}

Sysy2022Parser::DeclContext* Sysy2022Parser::CompunitContext::decl() {
  return getRuleContext<Sysy2022Parser::DeclContext>(0);
}

Sysy2022Parser::FuncdefContext* Sysy2022Parser::CompunitContext::funcdef() {
  return getRuleContext<Sysy2022Parser::FuncdefContext>(0);
}


size_t Sysy2022Parser::CompunitContext::getRuleIndex() const {
  return Sysy2022Parser::RuleCompunit;
}

antlrcpp::Any Sysy2022Parser::CompunitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Sysy2022ParserVisitor*>(visitor))
    return parserVisitor->visitCompunit(this);
  else
    return visitor->visitChildren(this);
}

Sysy2022Parser::CompunitContext* Sysy2022Parser::compunit() {
  CompunitContext *_localctx = _tracker.createInstance<CompunitContext>(_ctx, getState());
  enterRule(_localctx, 0, Sysy2022Parser::RuleCompunit);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(77);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(66);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
      case 1: {
        setState(64);
        decl();
        break;
      }

      case 2: {
        setState(65);
        funcdef();
        break;
      }

      }
      setState(68);
      compunitplus();
      setState(69);
      match(Sysy2022Parser::EOF);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(73);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
      case 1: {
        setState(71);
        decl();
        break;
      }

      case 2: {
        setState(72);
        funcdef();
        break;
      }

      }
      setState(75);
      match(Sysy2022Parser::EOF);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CompunitplusContext ------------------------------------------------------------------

Sysy2022Parser::CompunitplusContext::CompunitplusContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

Sysy2022Parser::CompunitplusContext* Sysy2022Parser::CompunitplusContext::compunitplus() {
  return getRuleContext<Sysy2022Parser::CompunitplusContext>(0);
}

Sysy2022Parser::DeclContext* Sysy2022Parser::CompunitplusContext::decl() {
  return getRuleContext<Sysy2022Parser::DeclContext>(0);
}

Sysy2022Parser::FuncdefContext* Sysy2022Parser::CompunitplusContext::funcdef() {
  return getRuleContext<Sysy2022Parser::FuncdefContext>(0);
}


size_t Sysy2022Parser::CompunitplusContext::getRuleIndex() const {
  return Sysy2022Parser::RuleCompunitplus;
}

antlrcpp::Any Sysy2022Parser::CompunitplusContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Sysy2022ParserVisitor*>(visitor))
    return parserVisitor->visitCompunitplus(this);
  else
    return visitor->visitChildren(this);
}

Sysy2022Parser::CompunitplusContext* Sysy2022Parser::compunitplus() {
  CompunitplusContext *_localctx = _tracker.createInstance<CompunitplusContext>(_ctx, getState());
  enterRule(_localctx, 2, Sysy2022Parser::RuleCompunitplus);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(86);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case Sysy2022Parser::INT:
      case Sysy2022Parser::FLOAT:
      case Sysy2022Parser::VOID:
      case Sysy2022Parser::CONST: {
        enterOuterAlt(_localctx, 1);
        setState(81);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
        case 1: {
          setState(79);
          decl();
          break;
        }

        case 2: {
          setState(80);
          funcdef();
          break;
        }

        }
        setState(83);
        compunitplus();
        break;
      }

      case Sysy2022Parser::EOF: {
        enterOuterAlt(_localctx, 2);

        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclContext ------------------------------------------------------------------

Sysy2022Parser::DeclContext::DeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

Sysy2022Parser::ConstdeclContext* Sysy2022Parser::DeclContext::constdecl() {
  return getRuleContext<Sysy2022Parser::ConstdeclContext>(0);
}

Sysy2022Parser::VardeclContext* Sysy2022Parser::DeclContext::vardecl() {
  return getRuleContext<Sysy2022Parser::VardeclContext>(0);
}


size_t Sysy2022Parser::DeclContext::getRuleIndex() const {
  return Sysy2022Parser::RuleDecl;
}

antlrcpp::Any Sysy2022Parser::DeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Sysy2022ParserVisitor*>(visitor))
    return parserVisitor->visitDecl(this);
  else
    return visitor->visitChildren(this);
}

Sysy2022Parser::DeclContext* Sysy2022Parser::decl() {
  DeclContext *_localctx = _tracker.createInstance<DeclContext>(_ctx, getState());
  enterRule(_localctx, 4, Sysy2022Parser::RuleDecl);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(90);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case Sysy2022Parser::CONST: {
        enterOuterAlt(_localctx, 1);
        setState(88);
        constdecl();
        break;
      }

      case Sysy2022Parser::INT:
      case Sysy2022Parser::FLOAT: {
        enterOuterAlt(_localctx, 2);
        setState(89);
        vardecl();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstdeclContext ------------------------------------------------------------------

Sysy2022Parser::ConstdeclContext::ConstdeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* Sysy2022Parser::ConstdeclContext::CONST() {
  return getToken(Sysy2022Parser::CONST, 0);
}

Sysy2022Parser::BtypeContext* Sysy2022Parser::ConstdeclContext::btype() {
  return getRuleContext<Sysy2022Parser::BtypeContext>(0);
}

std::vector<Sysy2022Parser::ConstdefContext *> Sysy2022Parser::ConstdeclContext::constdef() {
  return getRuleContexts<Sysy2022Parser::ConstdefContext>();
}

Sysy2022Parser::ConstdefContext* Sysy2022Parser::ConstdeclContext::constdef(size_t i) {
  return getRuleContext<Sysy2022Parser::ConstdefContext>(i);
}

tree::TerminalNode* Sysy2022Parser::ConstdeclContext::SEMICOLON() {
  return getToken(Sysy2022Parser::SEMICOLON, 0);
}

std::vector<tree::TerminalNode *> Sysy2022Parser::ConstdeclContext::COMMA() {
  return getTokens(Sysy2022Parser::COMMA);
}

tree::TerminalNode* Sysy2022Parser::ConstdeclContext::COMMA(size_t i) {
  return getToken(Sysy2022Parser::COMMA, i);
}


size_t Sysy2022Parser::ConstdeclContext::getRuleIndex() const {
  return Sysy2022Parser::RuleConstdecl;
}

antlrcpp::Any Sysy2022Parser::ConstdeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Sysy2022ParserVisitor*>(visitor))
    return parserVisitor->visitConstdecl(this);
  else
    return visitor->visitChildren(this);
}

Sysy2022Parser::ConstdeclContext* Sysy2022Parser::constdecl() {
  ConstdeclContext *_localctx = _tracker.createInstance<ConstdeclContext>(_ctx, getState());
  enterRule(_localctx, 6, Sysy2022Parser::RuleConstdecl);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(92);
    match(Sysy2022Parser::CONST);
    setState(93);
    btype();
    setState(94);
    constdef();
    setState(99);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == Sysy2022Parser::COMMA) {
      setState(95);
      match(Sysy2022Parser::COMMA);
      setState(96);
      constdef();
      setState(101);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(102);
    match(Sysy2022Parser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BtypeContext ------------------------------------------------------------------

Sysy2022Parser::BtypeContext::BtypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* Sysy2022Parser::BtypeContext::INT() {
  return getToken(Sysy2022Parser::INT, 0);
}

tree::TerminalNode* Sysy2022Parser::BtypeContext::FLOAT() {
  return getToken(Sysy2022Parser::FLOAT, 0);
}


size_t Sysy2022Parser::BtypeContext::getRuleIndex() const {
  return Sysy2022Parser::RuleBtype;
}

antlrcpp::Any Sysy2022Parser::BtypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Sysy2022ParserVisitor*>(visitor))
    return parserVisitor->visitBtype(this);
  else
    return visitor->visitChildren(this);
}

Sysy2022Parser::BtypeContext* Sysy2022Parser::btype() {
  BtypeContext *_localctx = _tracker.createInstance<BtypeContext>(_ctx, getState());
  enterRule(_localctx, 8, Sysy2022Parser::RuleBtype);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(104);
    _la = _input->LA(1);
    if (!(_la == Sysy2022Parser::INT

    || _la == Sysy2022Parser::FLOAT)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstdefContext ------------------------------------------------------------------

Sysy2022Parser::ConstdefContext::ConstdefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* Sysy2022Parser::ConstdefContext::ID() {
  return getToken(Sysy2022Parser::ID, 0);
}

tree::TerminalNode* Sysy2022Parser::ConstdefContext::ASSIGN() {
  return getToken(Sysy2022Parser::ASSIGN, 0);
}

Sysy2022Parser::ConstinitvalContext* Sysy2022Parser::ConstdefContext::constinitval() {
  return getRuleContext<Sysy2022Parser::ConstinitvalContext>(0);
}

std::vector<tree::TerminalNode *> Sysy2022Parser::ConstdefContext::LB() {
  return getTokens(Sysy2022Parser::LB);
}

tree::TerminalNode* Sysy2022Parser::ConstdefContext::LB(size_t i) {
  return getToken(Sysy2022Parser::LB, i);
}

std::vector<Sysy2022Parser::ConstexpContext *> Sysy2022Parser::ConstdefContext::constexp() {
  return getRuleContexts<Sysy2022Parser::ConstexpContext>();
}

Sysy2022Parser::ConstexpContext* Sysy2022Parser::ConstdefContext::constexp(size_t i) {
  return getRuleContext<Sysy2022Parser::ConstexpContext>(i);
}

std::vector<tree::TerminalNode *> Sysy2022Parser::ConstdefContext::RB() {
  return getTokens(Sysy2022Parser::RB);
}

tree::TerminalNode* Sysy2022Parser::ConstdefContext::RB(size_t i) {
  return getToken(Sysy2022Parser::RB, i);
}


size_t Sysy2022Parser::ConstdefContext::getRuleIndex() const {
  return Sysy2022Parser::RuleConstdef;
}

antlrcpp::Any Sysy2022Parser::ConstdefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Sysy2022ParserVisitor*>(visitor))
    return parserVisitor->visitConstdef(this);
  else
    return visitor->visitChildren(this);
}

Sysy2022Parser::ConstdefContext* Sysy2022Parser::constdef() {
  ConstdefContext *_localctx = _tracker.createInstance<ConstdefContext>(_ctx, getState());
  enterRule(_localctx, 10, Sysy2022Parser::RuleConstdef);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(106);
    match(Sysy2022Parser::ID);
    setState(113);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == Sysy2022Parser::LB) {
      setState(107);
      match(Sysy2022Parser::LB);
      setState(108);
      constexp();
      setState(109);
      match(Sysy2022Parser::RB);
      setState(115);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(116);
    match(Sysy2022Parser::ASSIGN);
    setState(117);
    constinitval();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstinitvalContext ------------------------------------------------------------------

Sysy2022Parser::ConstinitvalContext::ConstinitvalContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

Sysy2022Parser::ConstexpContext* Sysy2022Parser::ConstinitvalContext::constexp() {
  return getRuleContext<Sysy2022Parser::ConstexpContext>(0);
}

tree::TerminalNode* Sysy2022Parser::ConstinitvalContext::LC() {
  return getToken(Sysy2022Parser::LC, 0);
}

tree::TerminalNode* Sysy2022Parser::ConstinitvalContext::RC() {
  return getToken(Sysy2022Parser::RC, 0);
}

std::vector<Sysy2022Parser::ConstinitvalContext *> Sysy2022Parser::ConstinitvalContext::constinitval() {
  return getRuleContexts<Sysy2022Parser::ConstinitvalContext>();
}

Sysy2022Parser::ConstinitvalContext* Sysy2022Parser::ConstinitvalContext::constinitval(size_t i) {
  return getRuleContext<Sysy2022Parser::ConstinitvalContext>(i);
}

std::vector<tree::TerminalNode *> Sysy2022Parser::ConstinitvalContext::COMMA() {
  return getTokens(Sysy2022Parser::COMMA);
}

tree::TerminalNode* Sysy2022Parser::ConstinitvalContext::COMMA(size_t i) {
  return getToken(Sysy2022Parser::COMMA, i);
}


size_t Sysy2022Parser::ConstinitvalContext::getRuleIndex() const {
  return Sysy2022Parser::RuleConstinitval;
}

antlrcpp::Any Sysy2022Parser::ConstinitvalContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Sysy2022ParserVisitor*>(visitor))
    return parserVisitor->visitConstinitval(this);
  else
    return visitor->visitChildren(this);
}

Sysy2022Parser::ConstinitvalContext* Sysy2022Parser::constinitval() {
  ConstinitvalContext *_localctx = _tracker.createInstance<ConstinitvalContext>(_ctx, getState());
  enterRule(_localctx, 12, Sysy2022Parser::RuleConstinitval);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(132);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case Sysy2022Parser::LP:
      case Sysy2022Parser::MINUS:
      case Sysy2022Parser::NOT:
      case Sysy2022Parser::ADD:
      case Sysy2022Parser::ID:
      case Sysy2022Parser::INT_LIT:
      case Sysy2022Parser::FLOAT_LIT: {
        enterOuterAlt(_localctx, 1);
        setState(119);
        constexp();
        break;
      }

      case Sysy2022Parser::LC: {
        enterOuterAlt(_localctx, 2);
        setState(120);
        match(Sysy2022Parser::LC);
        setState(129);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & ((1ULL << Sysy2022Parser::LP)
          | (1ULL << Sysy2022Parser::LC)
          | (1ULL << Sysy2022Parser::MINUS)
          | (1ULL << Sysy2022Parser::NOT)
          | (1ULL << Sysy2022Parser::ADD)
          | (1ULL << Sysy2022Parser::ID)
          | (1ULL << Sysy2022Parser::INT_LIT)
          | (1ULL << Sysy2022Parser::FLOAT_LIT))) != 0)) {
          setState(121);
          constinitval();
          setState(126);
          _errHandler->sync(this);
          _la = _input->LA(1);
          while (_la == Sysy2022Parser::COMMA) {
            setState(122);
            match(Sysy2022Parser::COMMA);
            setState(123);
            constinitval();
            setState(128);
            _errHandler->sync(this);
            _la = _input->LA(1);
          }
        }
        setState(131);
        match(Sysy2022Parser::RC);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VardeclContext ------------------------------------------------------------------

Sysy2022Parser::VardeclContext::VardeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

Sysy2022Parser::BtypeContext* Sysy2022Parser::VardeclContext::btype() {
  return getRuleContext<Sysy2022Parser::BtypeContext>(0);
}

std::vector<Sysy2022Parser::VardefContext *> Sysy2022Parser::VardeclContext::vardef() {
  return getRuleContexts<Sysy2022Parser::VardefContext>();
}

Sysy2022Parser::VardefContext* Sysy2022Parser::VardeclContext::vardef(size_t i) {
  return getRuleContext<Sysy2022Parser::VardefContext>(i);
}

tree::TerminalNode* Sysy2022Parser::VardeclContext::SEMICOLON() {
  return getToken(Sysy2022Parser::SEMICOLON, 0);
}

std::vector<tree::TerminalNode *> Sysy2022Parser::VardeclContext::COMMA() {
  return getTokens(Sysy2022Parser::COMMA);
}

tree::TerminalNode* Sysy2022Parser::VardeclContext::COMMA(size_t i) {
  return getToken(Sysy2022Parser::COMMA, i);
}


size_t Sysy2022Parser::VardeclContext::getRuleIndex() const {
  return Sysy2022Parser::RuleVardecl;
}

antlrcpp::Any Sysy2022Parser::VardeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Sysy2022ParserVisitor*>(visitor))
    return parserVisitor->visitVardecl(this);
  else
    return visitor->visitChildren(this);
}

Sysy2022Parser::VardeclContext* Sysy2022Parser::vardecl() {
  VardeclContext *_localctx = _tracker.createInstance<VardeclContext>(_ctx, getState());
  enterRule(_localctx, 14, Sysy2022Parser::RuleVardecl);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(134);
    btype();
    setState(135);
    vardef();
    setState(140);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == Sysy2022Parser::COMMA) {
      setState(136);
      match(Sysy2022Parser::COMMA);
      setState(137);
      vardef();
      setState(142);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(143);
    match(Sysy2022Parser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VardefContext ------------------------------------------------------------------

Sysy2022Parser::VardefContext::VardefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* Sysy2022Parser::VardefContext::ID() {
  return getToken(Sysy2022Parser::ID, 0);
}

std::vector<tree::TerminalNode *> Sysy2022Parser::VardefContext::LB() {
  return getTokens(Sysy2022Parser::LB);
}

tree::TerminalNode* Sysy2022Parser::VardefContext::LB(size_t i) {
  return getToken(Sysy2022Parser::LB, i);
}

std::vector<Sysy2022Parser::ConstexpContext *> Sysy2022Parser::VardefContext::constexp() {
  return getRuleContexts<Sysy2022Parser::ConstexpContext>();
}

Sysy2022Parser::ConstexpContext* Sysy2022Parser::VardefContext::constexp(size_t i) {
  return getRuleContext<Sysy2022Parser::ConstexpContext>(i);
}

std::vector<tree::TerminalNode *> Sysy2022Parser::VardefContext::RB() {
  return getTokens(Sysy2022Parser::RB);
}

tree::TerminalNode* Sysy2022Parser::VardefContext::RB(size_t i) {
  return getToken(Sysy2022Parser::RB, i);
}

tree::TerminalNode* Sysy2022Parser::VardefContext::ASSIGN() {
  return getToken(Sysy2022Parser::ASSIGN, 0);
}

Sysy2022Parser::InitvalContext* Sysy2022Parser::VardefContext::initval() {
  return getRuleContext<Sysy2022Parser::InitvalContext>(0);
}


size_t Sysy2022Parser::VardefContext::getRuleIndex() const {
  return Sysy2022Parser::RuleVardef;
}

antlrcpp::Any Sysy2022Parser::VardefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Sysy2022ParserVisitor*>(visitor))
    return parserVisitor->visitVardef(this);
  else
    return visitor->visitChildren(this);
}

Sysy2022Parser::VardefContext* Sysy2022Parser::vardef() {
  VardefContext *_localctx = _tracker.createInstance<VardefContext>(_ctx, getState());
  enterRule(_localctx, 16, Sysy2022Parser::RuleVardef);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(167);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 14, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(145);
      match(Sysy2022Parser::ID);
      setState(152);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == Sysy2022Parser::LB) {
        setState(146);
        match(Sysy2022Parser::LB);
        setState(147);
        constexp();
        setState(148);
        match(Sysy2022Parser::RB);
        setState(154);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(155);
      match(Sysy2022Parser::ID);
      setState(162);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == Sysy2022Parser::LB) {
        setState(156);
        match(Sysy2022Parser::LB);
        setState(157);
        constexp();
        setState(158);
        match(Sysy2022Parser::RB);
        setState(164);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(165);
      match(Sysy2022Parser::ASSIGN);
      setState(166);
      initval();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InitvalContext ------------------------------------------------------------------

Sysy2022Parser::InitvalContext::InitvalContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

Sysy2022Parser::ExpContext* Sysy2022Parser::InitvalContext::exp() {
  return getRuleContext<Sysy2022Parser::ExpContext>(0);
}

tree::TerminalNode* Sysy2022Parser::InitvalContext::LC() {
  return getToken(Sysy2022Parser::LC, 0);
}

tree::TerminalNode* Sysy2022Parser::InitvalContext::RC() {
  return getToken(Sysy2022Parser::RC, 0);
}

std::vector<Sysy2022Parser::InitvalContext *> Sysy2022Parser::InitvalContext::initval() {
  return getRuleContexts<Sysy2022Parser::InitvalContext>();
}

Sysy2022Parser::InitvalContext* Sysy2022Parser::InitvalContext::initval(size_t i) {
  return getRuleContext<Sysy2022Parser::InitvalContext>(i);
}

std::vector<tree::TerminalNode *> Sysy2022Parser::InitvalContext::COMMA() {
  return getTokens(Sysy2022Parser::COMMA);
}

tree::TerminalNode* Sysy2022Parser::InitvalContext::COMMA(size_t i) {
  return getToken(Sysy2022Parser::COMMA, i);
}


size_t Sysy2022Parser::InitvalContext::getRuleIndex() const {
  return Sysy2022Parser::RuleInitval;
}

antlrcpp::Any Sysy2022Parser::InitvalContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Sysy2022ParserVisitor*>(visitor))
    return parserVisitor->visitInitval(this);
  else
    return visitor->visitChildren(this);
}

Sysy2022Parser::InitvalContext* Sysy2022Parser::initval() {
  InitvalContext *_localctx = _tracker.createInstance<InitvalContext>(_ctx, getState());
  enterRule(_localctx, 18, Sysy2022Parser::RuleInitval);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(182);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case Sysy2022Parser::LP:
      case Sysy2022Parser::MINUS:
      case Sysy2022Parser::NOT:
      case Sysy2022Parser::ADD:
      case Sysy2022Parser::ID:
      case Sysy2022Parser::INT_LIT:
      case Sysy2022Parser::FLOAT_LIT: {
        enterOuterAlt(_localctx, 1);
        setState(169);
        exp();
        break;
      }

      case Sysy2022Parser::LC: {
        enterOuterAlt(_localctx, 2);
        setState(170);
        match(Sysy2022Parser::LC);
        setState(179);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & ((1ULL << Sysy2022Parser::LP)
          | (1ULL << Sysy2022Parser::LC)
          | (1ULL << Sysy2022Parser::MINUS)
          | (1ULL << Sysy2022Parser::NOT)
          | (1ULL << Sysy2022Parser::ADD)
          | (1ULL << Sysy2022Parser::ID)
          | (1ULL << Sysy2022Parser::INT_LIT)
          | (1ULL << Sysy2022Parser::FLOAT_LIT))) != 0)) {
          setState(171);
          initval();
          setState(176);
          _errHandler->sync(this);
          _la = _input->LA(1);
          while (_la == Sysy2022Parser::COMMA) {
            setState(172);
            match(Sysy2022Parser::COMMA);
            setState(173);
            initval();
            setState(178);
            _errHandler->sync(this);
            _la = _input->LA(1);
          }
        }
        setState(181);
        match(Sysy2022Parser::RC);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncdefContext ------------------------------------------------------------------

Sysy2022Parser::FuncdefContext::FuncdefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

Sysy2022Parser::FunctypeContext* Sysy2022Parser::FuncdefContext::functype() {
  return getRuleContext<Sysy2022Parser::FunctypeContext>(0);
}

tree::TerminalNode* Sysy2022Parser::FuncdefContext::ID() {
  return getToken(Sysy2022Parser::ID, 0);
}

tree::TerminalNode* Sysy2022Parser::FuncdefContext::LP() {
  return getToken(Sysy2022Parser::LP, 0);
}
